# readdit

./: .gitignore  README.md
platform-api/: pyproject.toml
platform-api/app/: main.py
platform-api/app/db/: database.py
platform-api/app/routers/: routes.py
